k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-lens
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-lens
  template:
    metadata:
      labels:
        app: cluster-lens
    spec:
      containers:
        - name: cluster-lens
          image: paldoc4/kubo_pro:01
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
          readinessProbe:
            httpGet:
              path: /
              port: 8501
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8501
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
